# wickra-radar

./: ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  THREAT_MODEL.md  clippy.toml  deny.toml  lychee.toml  osv-scanner.toml  repo-metadata.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/scripts/: check-cbindgen.sh
.github/workflows/: bench.yml  ci.yml  release.yml
bindings/c/: Cargo.toml  README.md  cbindgen.toml
bindings/c/include/: wickra_radar.h
bindings/c/src/: lib.rs
bindings/csharp/WickraRadar/: DllResolver.cs  Native.cs  README.md  Radar.cs  WickraRadar.csproj
bindings/csharp/WickraRadar.Tests/: GoldenTests.cs  RadarTests.cs  WickraRadar.Tests.csproj
bindings/go/: README.md  go.mod  golden_test.go  wickra.go  wickra_test.go
bindings/java/: README.md  pom.xml
bindings/java/src/main/java/org/wickra/radar/: Native.java  Radar.java
bindings/java/src/test/java/org/wickra/radar/: GoldenTest.java  RadarTest.java
bindings/node/: Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json
bindings/node/__tests__/: completeness.test.js  golden.test.js  radar.test.js
bindings/node/npm/darwin-arm64/: package.json
bindings/node/npm/darwin-x64/: package.json
bindings/node/npm/linux-arm64-gnu/: package.json
bindings/node/npm/linux-x64-gnu/: package.json
bindings/node/npm/win32-arm64-msvc/: package.json
bindings/node/npm/win32-x64-msvc/: package.json
bindings/node/src/: lib.rs
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/python/wickra_radar/: __init__.py  __init__.pyi
bindings/python/src/: lib.rs
bindings/python/tests/: test_completeness.py  test_golden.py  test_smoke.py
bindings/r/: DESCRIPTION  NAMESPACE  README.md
bindings/r/R/: radar.R
bindings/r/src/: Makevars  Makevars.win  wickra_radar.c
bindings/r/tests/: run_tests.R
bindings/wasm/: Cargo.toml  README.md
bindings/wasm/src/: lib.rs
crates/radar-bench/: Cargo.toml
crates/radar-bench/benches/: radar.rs
crates/radar-cli/: Cargo.toml
crates/radar-cli/src/: args.rs  main.rs  run.rs
crates/radar-core/: Cargo.toml
crates/radar-core/src/: aggregate.rs  config.rs  error.rs  event.rs  indicator_set.rs  lib.rs  radar.rs  scan.rs  signal.rs  spec.rs  symbol_state.rs  universe.rs
crates/radar-core/tests/: conformance.rs  golden.rs  proptest_invariants.rs  streaming_eq_batch.rs
docs/: ARCHITECTURE.md  Cookbook.md  EVENTS.md  SCORING.md  SIGNALS.md  STREAMING.md
examples/: README.md
examples/c/: CMakeLists.txt  scan.c  scan.cpp
examples/csharp/Scan/: Program.cs  Scan.csproj
examples/go/: go.mod  main.go
examples/java/: Scan.java
examples/node/: package.json  scan.js
examples/python/: scan.py
examples/r/: scan.R
examples/rust/: Cargo.toml
examples/rust/src/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: command_json.rs  scan.rs  spec_parse.rs
golden/: README.md  events.json
golden/expected/: composite.json  funding-flip.json  liq-cluster.json  oi-delta.json  oi-price-divergence.json
golden/specs/: composite.json  funding-flip.json  liq-cluster.json  oi-delta.json  oi-price-divergence.json
