[package]
name = "radar-bench"
description = "Criterion benchmarks for the Wickra Radar core: scan scaling by universe size and events per perp, parallel vs sequential."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[features]
# Toggle the core's parallel fold so `cargo bench` (default) measures the rayon
# path and `cargo bench --no-default-features` measures the sequential one.
default = ["parallel"]
parallel = ["radar-core/parallel"]

[dependencies]
radar-core = { path = "../radar-core", version = "0.1.0", default-features = false }

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "radar"
harness = false
